--- a/index.html
+++ b/index.html
@@ -46,9 +46,10 @@ header h1 { position: relative; z-index: 1; margin: 0; font-size: 1.8rem; }
 
 .card { background: var(--card); padding: 15px; border-radius: 12px; box-shadow: 0 4px 12px rgba(0,0,0,0.05); margin-bottom: 12px; transition: transform 0.2s; }
 .card:hover { transform: translateY(-2px); }
+
 .exercise { display: flex; flex-wrap: wrap; justify-content: space-between; align-items: center; padding: 8px 0; }
 .exercise .info { flex: 1; }
-.exercise input { width: 70px; padding: 6px; border: 1px solid #ccc; border-radius: 6px; margin-right: 5px; cursor: pointer; }
+.exercise input { width: 70px; padding: 6px; border: 1px solid #ccc; border-radius: 6px; margin-right: 5px; }
 
 .weight-history, .reps-history, .time-display { font-size: 0.85rem; margin-top: 3px; font-weight: 500; }
 .weight-history { color: var(--weight-color); }
@@ -94,7 +95,7 @@ header h1 { position: relative; z-index: 1; margin: 0; font-size: 1.8rem; }
     <input type="text" id="newExerciseName" placeholder="Nome esercizio">
     <input type="number" id="newExerciseWeight" placeholder="Peso (kg)">
     <input type="text" id="newExerciseReps" placeholder="Ripetizioni (libere)">
-    <input type="number" id="newExerciseTime" placeholder="Tempo (minuti)">
+    <input type="number" id="newExerciseCardio" placeholder="Tempo (minuti)">
     <div class="modal-actions">
       <button class="btn primary" id="saveExerciseBtn"><i class="fa fa-save"></i> Salva</button>
       <button class="btn danger" id="closeModalBtn"><i class="fa fa-times"></i> Chiudi</button>
@@ -113,14 +114,12 @@ const closeModalBtn = document.getElementById("closeModalBtn");
 const newExerciseName = document.getElementById("newExerciseName");
 const newExerciseWeight = document.getElementById("newExerciseWeight");
 const newExerciseReps = document.getElementById("newExerciseReps");
-const newExerciseTime = document.getElementById("newExerciseTime");
+const newExerciseCardio = document.getElementById("newExerciseCardio");
 
 const STORAGE_KEY = "gym_notes_premium";
 
 function loadData() { return JSON.parse(localStorage.getItem(STORAGE_KEY) || "{}"); }
 function saveData(data) { localStorage.setItem(STORAGE_KEY, JSON.stringify(data)); }
-
-let dragSrcIndex = null;
 
 function renderExercises() {
   const data = loadData();
@@ -132,13 +131,6 @@ function renderExercises() {
   exercises.forEach((ex, index) => {
     const div = document.createElement("div");
     div.classList.add("card", "exercise");
-    div.setAttribute("draggable", true);
-    div.dataset.index = index;
-
-    div.addEventListener("dragstart", (e) => { dragSrcIndex = index; div.style.opacity = "0.5"; });
-    div.addEventListener("dragend", () => { dragSrcIndex = null; div.style.opacity = "1"; });
-    div.addEventListener("dragover", (e) => e.preventDefault());
-    div.addEventListener("drop", () => { if (dragSrcIndex !== null && dragSrcIndex !== index) swapExercises(day, dragSrcIndex, index); });
 
     const weightHistoryText = ex.weightHistory?.length ? ex.weightHistory.join(" → ") + " kg" : "";
     const repsText = ex.reps ? ex.reps : "";
@@ -149,47 +141,50 @@ function renderExercises() {
     if (weightHistoryText) infoHTML += `<div class="weight-history"><i class="fa fa-dumbbell"></i> ${weightHistoryText}</div>`;
     if (repsText) infoHTML += `<div class="reps-history"><i class="fa fa-repeat"></i> ${repsText}</div>`;
 
-    div.innerHTML = `
-      <div class="info">${infoHTML}</div>
-      ${(weightHistoryText || repsText) ? `
-      <div>
-        <input type="number" placeholder="kg" value="${ex.weightHistory?.[ex.weightHistory.length-1] || ""}" id="weight-${day}-${index}" />
-        <input type="text" placeholder="Ripetizioni" value="${ex.reps || ""}" id="reps-${day}-${index}" />
-        <button class="btn primary" onclick="saveRecord('${day}', ${index})"><i class="fa fa-save"></i></button>
-        <button class="btn danger" onclick="deleteExercise('${day}', ${index})"><i class="fa fa-trash"></i></button>
-      </div>` : `
-      <div>
-        <button class="btn danger" onclick="deleteExercise('${day}', ${index})"><i class="fa fa-trash"></i> Elimina</button>
-      </div>`}
-    `;
+    let controlsHTML = "";
 
+    const hasWeight = !!weightHistoryText;
+    const hasReps = !!repsText;
+    const hasTime = !!timeText;
+
+    if (hasWeight) controlsHTML += `<input type="number" placeholder="kg" value="${ex.weightHistory[ex.weightHistory.length-1] || ""}" id="weight-${day}-${index}" />`;
+    if (hasReps) controlsHTML += `<input type="text" placeholder="Ripetizioni" value="${ex.reps || ""}" id="reps-${day}-${index}" />`;
+    if (hasTime) controlsHTML += `<input type="number" placeholder="Tempo" value="${ex.cardio}" id="time-${day}-${index}" />`;
+
+    // Bottone salva unico
+    if (hasWeight || hasReps || hasTime) controlsHTML += `<button class="btn primary" onclick="saveRecord('${day}', ${index})"><i class="fa fa-save"></i></button>`;
+
+    // Cestino e frecce
+    controlsHTML += `<button class="btn danger" onclick="deleteExercise('${day}', ${index})"><i class="fa fa-trash"></i></button>
+                     <button class="btn" onclick="moveUp('${day}', ${index})"><i class="fa fa-arrow-up"></i></button>
+                     <button class="btn" onclick="moveDown('${day}', ${index})"><i class="fa fa-arrow-down"></i></button>`;
+
+    div.innerHTML = `<div class="info">${infoHTML}</div><div>${controlsHTML}</div>`;
     exerciseContainer.appendChild(div);
   });
-}
-
-// Swap esercizi
-function swapExercises(day, from, to) {
-  const data = loadData();
-  const exercises = data[day];
-  const [moved] = exercises.splice(from, 1);
-  exercises.splice(to, 0, moved);
-  saveData(data);
-  renderExercises();
 }
 
 function saveRecord(day, index) {
   const data = loadData();
   const ex = data[day][index];
+
   const weightInput = document.getElementById(`weight-${day}-${index}`);
   const repsInput = document.getElementById(`reps-${day}-${index}`);
-  const newWeight = parseFloat(weightInput.value);
-  const newReps = repsInput.value.trim();
-  const lastWeight = ex.weightHistory?.[ex.weightHistory.length - 1] || null;
+  const timeInput = document.getElementById(`time-${day}-${index}`);
+
+  const newWeight = weightInput ? parseFloat(weightInput.value) : null;
+  const newReps = repsInput ? repsInput.value.trim() : null;
+  const newTime = timeInput ? parseInt(timeInput.value) : null;
+
+  const lastWeight = ex.weightHistory?.[ex.weightHistory.length-1] || null;
   if (!isNaN(newWeight) && newWeight !== lastWeight) {
     if (!ex.weightHistory) ex.weightHistory = [];
     ex.weightHistory.push(newWeight);
   }
-  if (newReps !== "") ex.reps = newReps;
+
+  if (newReps !== null && newReps !== "") ex.reps = newReps;
+  if (!isNaN(newTime)) ex.cardio = newTime;
+
   saveData(data);
   renderExercises();
 }
@@ -198,7 +193,7 @@ addExerciseBtn.addEventListener("click", () => {
   newExerciseName.value = "";
   newExerciseWeight.value = "";
   newExerciseReps.value = "";
-  newExerciseTime.value = "";
+  newExerciseCardio.value = "";
   modal.classList.remove("hidden");
 });
 
@@ -206,12 +201,21 @@ saveExerciseBtn.addEventListener("click", () => {
   const name = newExerciseName.value.trim();
   const weight = parseFloat(newExerciseWeight.value);
   const reps = newExerciseReps.value.trim();
-  const cardio = parseInt(newExerciseTime.value);
+  const cardio = parseInt(newExerciseCardio.value);
+
   if (!name) return alert("Inserisci un nome per l'esercizio.");
+
   const data = loadData();
   const day = daySelect.value;
   if (!data[day]) data[day] = [];
-  const newEx = { name, reps: reps !== "" ? reps : null, weightHistory: !isNaN(weight) ? [weight] : [], cardio: !isNaN(cardio) ? cardio : null };
+
+  const newEx = {
+    name,
+    reps: reps !== "" ? reps : null,
+    weightHistory: !isNaN(weight) ? [weight] : [],
+    cardio: !isNaN(cardio) ? cardio : null
+  };
+
   data[day].push(newEx);
   saveData(data);
   modal.classList.add("hidden");
@@ -224,6 +228,24 @@ function deleteExercise(day, index) {
   if (!confirm("Vuoi eliminare questo esercizio?")) return;
   const data = loadData();
   data[day].splice(index, 1);
+  saveData(data);
+  renderExercises();
+}
+
+function moveUp(day, index) {
+  if (index === 0) return;
+  const data = loadData();
+  const arr = data[day];
+  [arr[index-1], arr[index]] = [arr[index], arr[index-1]];
+  saveData(data);
+  renderExercises();
+}
+
+function moveDown(day, index) {
+  const data = loadData();
+  const arr = data[day];
+  if (index === arr.length-1) return;
+  [arr[index+1], arr[index]] = [arr[index], arr[index+1]];
   saveData(data);
   renderExercises();
 }
