--- a/index.html
+++ b/index.html
@@ -181,14 +181,12 @@ header h1 { position: relative; z-index: 1; margin: 0; font-size: 1.8rem; }
 </header>
 
 <div id="updateBox" style="background:#fff3cd;border:1px solid #ffeeba;padding:10px;border-radius:8px;margin-bottom:10px;font-size:0.9rem;color:#856404;">
-🔔 Aggiornamento:<br>
+🔔 Ultimi aggiornamenti:<br>
 - Cliccando in alto a sinistra sulla matita, puoi modificare il colore della barra superiore.<br>
 - Cliccando in alto a destra sul timer, puoi impostare il timer durante l'allenamento.<br>
 - 'Crea sezione' utile a distinguere i gruppi muscolari.<br>
 - 'Note', utile a segnare appunti sul tuo esercizio.<br>
 - Se modifichi il peso e salvi, risulterà il progressivo.<br><br>
-Mi dispiace se i tuoi dati sono andati persi.<br>
-Nun ci scassare a minchia e allenati ❤️
 </div>
 
 <div class="container">
